# terminus

./: .gitignore  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  pyragify.yml
.github/workflows/: ci.yml
output/: hashes.json  metadata.json
output/remaining/: src_concatenated.txt
src/terminus/: __init__.py  app.py  config.py  database.py  models.py  prompts.py  schemas.py  utils.py
src/terminus/routers/: candidate.py  definition.py  home.py  terms.py
src/terminus/services/: candidate_terminus_service.py  llm_service.py  terminus_service.py  wikipedia_service.py
